argocd-install/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
spec:
  tls:
    - hosts:
      - argocd.josephang.space
  ingressClassName: nginx
  rules:
  - host: argocd.josephang.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
